<resources>
    <string name="app_name">taskMaster</string>
    <string name="lbl_submit">save</string>
    <string name="lbl_inter_your_name">inter your name</string>
    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="lbl_task_1">read28</string>
    <string name="lbl_task_2">lab27</string>
    <string name="lbl_task_3">code challenge 27</string>
    <string name="lbl_menu_sitting">Sitting</string>
    <string name="lbl_menu_task">Task</string>
    <string name="lbl_title">task title</string>
    <string name="lbl_add_task">Add task</string>
    <string name="lbl_task_title">Task Title</string>
    <string name="lbl_task_description">Task Description</string>
    <string name="lbl_total_tasks">Total Tasks : 0</string>
    <string name="lbl_all_tasks">All Tasks</string>
    <string name="lbl_my_tasks">My tasks</string>
    <string name="lbl_inter_task_num">inter task number</string>
    <string name="text_view_state">TextView</string>
    <string name="edit_txt_email">Enter Your Email</string>
    <string name="edit_txt_password">Enter Your Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">"Log in "</string>
    <string name="log_out">log out</string>
    <string name="btn_upload">UPLOAD</string>
    <string name="btn_location">add location</string>
    <string name="lbl_ad">load Ad</string>
    <array name="state_spinner">
        <item>COMPLETE</item>
        <item>IN_PROGRESS</item>
        <item>ASSIGNED</item>
        <item>NEW</item>
    </array>
    <array name="team">

        <item>team3</item>
    </array>
</resources>